# binance-api

./: Cargo.toml  README.md
src/: client.rs  lib.rs  main.rs  market.rs  wallet.rs
src/http/: client.rs  mod.rs
src/http/market/: market.rs
src/http/wallet/: wallet.rs
src/ws/: client.rs
