[package]
name = "binance-sdk-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"]}
tokio = { version = "1", features = ["full"]}
futures = "0.3"
log = "0.4"
colored = "2"
